--- a/Jupyter_Notes/Performances_with_new_labels.ipynb
+++ b/Jupyter_Notes/Performances_with_new_labels.ipynb
@@ -256,7 +256,30 @@
     "    # Create and display the DataFrame\n",
     "    df = pd.DataFrame(table_data)\n",
     "    return df\n",
-    "\n"
+    "\n",
+    "def make_new_label(y_sample :np.ndarray, \n",
+    "                   entropy_array : np.ndarray, \n",
+    "                   entropy_thresholds : list[float] | float = 0.4, \n",
+    "                   num_classes : int = 10):\n",
+    "    size = entropy_array.shape[0]\n",
+    "    y_sample_copy = y_sample.copy()[:size]\n",
+    "    new_label_cnt = 1\n",
+    "    if isinstance(entropy_thresholds,float):\n",
+    "        mask = entropy_array > entropy_thresholds\n",
+    "        y_sample_copy[mask] = y_sample_copy[mask]+num_classes*new_label_cnt\n",
+    "        return y_sample_copy, new_label_cnt\n",
+    "    elif len(entropy_thresholds) == 1:\n",
+    "        mask = entropy_array > entropy_thresholds[0]\n",
+    "        y_sample_copy[mask] = y_sample_copy[mask]+num_classes*new_label_cnt\n",
+    "        return y_sample_copy, new_label_cnt\n",
+    "    else:\n",
+    "        prev_th = entropy_thresholds[0]\n",
+    "        for curr_th in entropy_thresholds[1:]:\n",
+    "            mask = np.prod([entropy_array>prev_th,entropy_array<=curr_th],\n",
+    "                     axis=0)==1\n",
+    "            y_sample_copy[mask] = y_sample_copy[mask]+num_classes*new_label_cnt\n",
+    "            new_label_cnt += 1\n",
+    "        return y_sample_copy, new_label_cnt\n"
    ]
   },
   {
@@ -290,21 +313,37 @@
     "PGD_untargeted_test = np.load('./adversarial_examples/gen_by_ResNet/pgd_0.376_x_test_untarget_gen_by_n_9_v1_cifar10.keras.npy')\n",
     "PGD_targeted_test = np.load('./adversarial_examples/gen_by_ResNet/pgd_0.376_x_test_target_to_ll_gen_by_n_9_v1_cifar10.keras.npy')\n",
     "\n",
+    "table_data = {\n",
+    "        'Testing dataset': ['Original','CWL2','PGD untargeted','PGD targeted'],\n",
+    "    '20v1_Baseline':[0,0,0,0],\n",
+    "    '20v1_new_label':[0,0,0,0],\n",
+    "    '20v2_Baseline':[0,0,0,0],\n",
+    "    '20v2_new_label':[0,0,0,0],\n",
+    "    '56v1_Baseline':[0,0,0,0],\n",
+    "    '56v1_new_label':[0,0,0,0],\n",
+    "    '56v2_Baseline':[0,0,0,0],\n",
+    "    '56v2_new_label':[0,0,0,0],\n",
+    "    }\n",
+    "\n",
     "for model_name, baseline_model in baseline_models.items():\n",
     "    base = model_name.replace('.keras','')\n",
     "    parts = base.split('_')\n",
     "    parts.pop()\n",
     "    adv_type = parts[-1]\n",
+    "    table_values = [0,0,0,0]\n",
     "    if adv_type == 'cwl2':\n",
     "        testing_x = cwl2_test\n",
+    "        idx = 1\n",
     "    elif adv_type == 'untargeted':\n",
     "        adv_type = 'PGD untargeted'\n",
+    "        idx = 2\n",
     "        testing_x = PGD_untargeted_test\n",
     "    elif adv_type == 'targeted':\n",
     "        adv_type = 'PGD targeted'\n",
+    "        idx = 3\n",
     "        testing_x = PGD_targeted_test\n",
     "    comparison_model = '_'.join(parts)+'_new_label.keras'\n",
-    "    print('-'*20,f\"Model: {parts[1]+adv_type}\")\n",
+    "#     print(f\"Model: {parts[1]+' '+ adv_type} ---- Baseline ----- Comparison\")\n",
     "    comparison_model = newly_labeled_models.get(comparison_model)\n",
     "    \n",
     "    pred_on_original_base = baseline_model.predict(x_test,verbose=0)\n",
@@ -314,22 +353,147 @@
     "    a_comp[a_comp>9] = a_comp[a_comp>9]-10\n",
     "    acc_base = np.mean(a_base == y_test.reshape(-1))\n",
     "    acc_comp = np.mean(a_comp == y_test.reshape(-1))\n",
-    "    print(f\"Accuracy on original test set: {acc_base:.4f} (Baseline), {acc_comp:.4f} (Comparison)\")\n",
-    "    \n",
+    "#     print(f\"original test set: {acc_base:.4f} , {acc_comp:.4f} \")\n",
+    "    table_data[parts[1][-4:]+'_Baseline'][0] = acc_base\n",
+    "    table_data[parts[1][-4:]+'_new_label'][0] = acc_comp\n",
     "    pred_on_testing_base = baseline_model.predict(testing_x,verbose=0)\n",
     "    pred_on_testing_comparison = comparison_model.predict(testing_x,verbose=0)\n",
     "    a_base = np.argmax(pred_on_testing_base,axis=-1)\n",
     "    a_comp = np.argmax(pred_on_testing_comparison,axis=-1)\n",
-    "    acc_base = np.mean(a_base == y_test)\n",
+    "    acc_base = np.mean(a_base == y_test.reshape(-1))\n",
     "    a_comp[a_comp>9] = a_comp[a_comp>9]-10\n",
     "    acc_comp = np.mean(a_comp == y_test.reshape(-1))\n",
-    "    print(f\"Accuracy on {adv_type} test set: {acc_base:.4f} (Baseline), {acc_comp:.4f} (Comparison)\")"
+    "#     print(f\"{adv_type} test set: {acc_base:.4f} , {acc_comp:.4f}\")\n",
+    "    table_data[parts[1][-4:]+'_Baseline'][idx] = acc_base\n",
+    "    table_data[parts[1][-4:]+'_new_label'][idx] = acc_comp\n",
+    "df = pd.DataFrame(table_data)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8e06e85b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-14 22:41:31.500459: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys, os\n",
+    "sys.path.append(os.path.abspath('../'))\n",
+    "from logifold_modules.logifoldv1_4 import Logifold"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e06e85b",
+   "id": "5ec767b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_logifold = Logifold(10, name = 'Baseline_',\n",
+    "                             x_tr = x_train, y_tr = y_train_categorical_10,\n",
+    "                             x_v = x_val, y_v = y_val_categorical_10,\n",
+    "                             path = os.path.abspath('../')+'/logifolds/exp_new_labels/baseline/')\n",
+    "\n",
+    "comparison_logifold = Logifold(20, name = 'comparison_',\n",
+    "                             x_tr = x_train, y_tr = y_train_categorical_10,\n",
+    "                             x_v = x_val, y_v = y_val_categorical_10,\n",
+    "                             path = os.path.abspath('../')+'/logifolds/exp_new_labels/comparison/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "182defde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for model_name, baseline_model in baseline_models.items():\n",
+    "    # model name : specialist_{member}_{adv_name}_baseline.keras\n",
+    "    base = model_name.replace('.keras','')\n",
+    "    parts = base.split('_')\n",
+    "    parts[-2] = adv_type\n",
+    "    if adv_type == 'cwl2':\n",
+    "        first_idx = 1\n",
+    "    elif adv_type == 'untargeted':\n",
+    "        first_idx = 2\n",
+    "    elif adv_type == 'targeted':\n",
+    "        first_idx = 3\n",
+    "    # parts[1] = ResNet##v#\n",
+    "    second_idx = int(parts[1][5:7]+ parts[1][-1])\n",
+    "    key = (first_idx, second_idx)\n",
+    "    # second index: 201, 202, 561, 562\n",
+    "    baseline_logifold.add(baseline_model, key)\n",
+    "    \n",
+    "for model_name, comparison_model in newly_labeled_models.items():\n",
+    "    # model name : specialist_{member}_{adv_name}_new_label.keras\n",
+    "    base = model_name.replace('.keras','')\n",
+    "    parts = base.split('_')\n",
+    "    parts[-3] = adv_type\n",
+    "    if adv_type == 'cwl2':\n",
+    "        first_idx = 1\n",
+    "    elif adv_type == 'PGD untargeted':\n",
+    "        first_idx = 2\n",
+    "    elif adv_type == 'PGD targeted':\n",
+    "        first_idx = 3\n",
+    "    # parts[1] = ResNet##v#\n",
+    "    second_idx = int(parts[1][5:7]+ parts[1][-1])\n",
+    "    key = (first_idx, second_idx)\n",
+    "    # second index: 201, 202, 561, 562\n",
+    "    comparison_logifold.add(comparison_model, key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ecdabc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "cwl2_new_label_test\n",
+    "PGD_untargeted_new_label_test\n",
+    "PGD_targeted_new_label_test\n",
+    "'''\n",
+    "# new label original test dataset\n",
+    "entropy_array = get_entropy_array(committee,x_test)\n",
+    "np.save('./new_labels/SB1/new_label_original_test.npy',\n",
+    "       make_new_label(y_test, entropy_array)[0]\n",
+    "        )\n",
+    "\n",
+    "original_new_label_test = np.load('./new_labels/SB1/new_label_original_test.npy')\n",
+    "testing_datasets_no_new_label = [y_test_categorical_10,\n",
+    "                                 to_categorical(cwl2_test,10),\n",
+    "                                 to_categorical(PGD_untargeted_test,10),\n",
+    "                                 to_categorical(PGD_targeted_test,10)\n",
+    "                                ]\n",
+    "testing_datasets_new_label = [to_categorical(original_new_label_test,20),\n",
+    "                   to_categorical(cwl2_new_label_test,20),\n",
+    "                   to_categorical(PGD_untargeted_new_label_test,20),\n",
+    "                   to_categorical(PGD_targeted_new_label_test,20)\n",
+    "                  ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7d7dea7",
    "metadata": {},
    "outputs": [],
    "source": []
