--- a/Jupyter_Notes/Accuracy_and_disagreements.ipynb
+++ b/Jupyter_Notes/Accuracy_and_disagreements.ipynb
@@ -17,6 +17,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "0a33fd53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "36c31de2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6020599913279623"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-(1/4)*math.log(1/4,10)-(1/4)*math.log(1/4,10)-(1/4)*math.log(1/4,10)-(1/4)*math.log(1/4,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a3a48703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4515449934959717"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-(2/4)*math.log(2/4,10)-(1/4)*math.log(1/4,10)-(1/4)*math.log(1/4,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "462169b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.30102999566398114"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-(1/2)*math.log(1/2,10)-(1/2)*math.log(1/2,10)\n",
+    "# AABB"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "47f8439e",
    "metadata": {},
@@ -429,12 +503,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "768318c1",
+   "metadata": {},
+   "source": [
+    " specialization on the union of original and adv sample may give better full-and-fine models\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ce68df67",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Greater entropy threshold implies lower accuracy on X_0\n",
+    "# Smaller entropy threshold will cause overfitting specialization."
+   ]
   }
  ],
  "metadata": {
