--- a/Jupyter_Notes/Performances_with_new_labels.ipynb
+++ b/Jupyter_Notes/Performances_with_new_labels.ipynb
@@ -491,9 +491,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ac42e53",
+   "metadata": {},
+   "source": [
+    "Computation fuzzy domain follows the target label. For instance, tager labels are 0 - 9, then we sample from original dataset.\n",
+    "\n",
+    "\n",
+    "Compare with separation by method.. (by PGD or Step size) \n",
+    "\n",
+    "Logifold1 : label by methods\n",
+    "\n",
+    "Logifold2 : label by entropies\n",
+    "\n",
+    "Union of original and PGD\n",
+    "\n",
+    "-> by original and PGD\n",
+    "\n",
+    "-> by entropy\n",
+    "\n",
+    "in terms of filter first"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7d7dea7",
+   "id": "e6b8daaf",
    "metadata": {},
    "outputs": [],
    "source": []
