--- a/notebooks/04_main_experiment.ipynb
+++ b/notebooks/04_main_experiment.ipynb
@@ -956,7 +956,7 @@
     "experiment_description = '''\n",
     "Baseline : Res + VGG\n",
     "first layer : Res\n",
-    "Second layer : Res + VGG\n",
+    "Second layer : Res\n",
     "union : clean + weak + strong\n",
     "'''\n",
     "def log_metrics_csv(out_csv, row: dict):\n",
