update notebook 03, utils, helper for 03 note, and create __init__.py in source directory.

--- a/01_torch_autoattack_robustbench.ipynb
+++ b/01_torch_autoattack_robustbench.ipynb
@@ -27,6 +27,9 @@
     "\n",
     "from robustbench.data import load_cifar10\n",
     "from robustbench.utils import load_model\n",
+    "\n",
+    "## install autoattack first.\n",
+    "\n",
     "from autoattack import AutoAttack\n",
     "\n",
     "from torchvision import datasets, transforms\n",
@@ -40,9 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_yaml(path):\n",
-    "    with open(path, \"r\") as f:\n",
-    "        return yaml.safe_load(f)\n",
+    "from source.utils import load_yaml\n",
     "\n",
     "PATHS = load_yaml(\"./configs/paths.yaml\")\n",
     "EXP   = load_yaml(\"./configs/exp.yaml\")\n",
@@ -52,11 +53,7 @@
     "\n",
     "seed            = int(EXP[\"seed\"]) # 42\n",
     "aa_cfg          = EXP[\"autoattack\"]\n",
-    "norm            = aa_cfg[\"norm\"] #l2\n",
-    "eps             = float(aa_cfg[\"eps\"]) # 0.5\n",
-    "bs              = int(aa_cfg[\"batch_size\"]) #524\n",
-    "rb_model_name   = aa_cfg[\"robustbench_model\"] #standard\n",
-    "rb_threat_model = aa_cfg[\"robustbench_threat_model\"] #l2\n",
+    "norm, eps, bs, rb_model_name, rb_threat_model = \"L2\", 0.5, 524, \"Standard\", \"L2\"\n",
     "\n",
     "os.makedirs(autoattack_out, exist_ok=True)"
    ]
@@ -133,7 +130,17 @@
     "x_adv_test = adversary.run_standard_evaluation(x_test, y_test, bs=bs)\n",
     "\n",
     "x_adv = x_adv_test.detach().cpu()\n",
-    "x_adv_nhwc = x_adv.permute(0, 2, 3, 1).contiguous().numpy().astype(np.float32)\n",
+    "x_adv_nhwc = x_adv.permute(0, 2, 3, 1).contiguous().numpy().astype(np.float32)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e95ef020",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_prefix = \"data/adversarial_samples/autoattack_torch/\"\n",
     "np.save(out_prefix + \"x_adv_test_std_l2_eps5\", x_adv_nhwc)\n"
    ]
   },
@@ -148,12 +155,6 @@
     "\n",
     "- `x_adv_test_std_l2_eps5.npy`"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "46ce36e7",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
