--- a/02_tf_train_resnet_vgg.ipynb
+++ b/02_tf_train_resnet_vgg.ipynb
@@ -27,10 +27,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "sys.path.append(\"./source\")\n",
-    "\n",
-    "def load_yaml(path):\n",
-    "    with open(path, \"r\") as f:\n",
-    "        return yaml.safe_load(f)\n",
+    "from source.utils import load_yaml\n",
     "\n",
     "PATHS : yaml = load_yaml(\"./configs/paths.yaml\")\n",
     "EXP : yaml  = load_yaml(\"./configs/exp.yaml\")\n",
