--- a/03_tf_art_apgd_samples.ipynb
+++ b/03_tf_art_apgd_samples.ipynb
@@ -184,7 +184,7 @@
     "    adv_name = 'APGD_weak' if d['max_iter'] == 2 else 'APGD_strong'\n",
     "    split = str(d['split'])\n",
     "    tag = str(d[\"tag\"]) if \"tag\" in d.files else \"\"\n",
-    "    sample_name = f\"{adv_name}_{tag}_{split}\" if tag else f\"{adv_name}_{split}\"\n",
+    "    sample_name = f\"{tag}_{adv_name}_{split}\" if tag else f\"{adv_name}_{split}\"\n",
     "    samples[sample_name] = d['x_adv']\n",
     "    y_true_dict[sample_name] = d['y']\n",
     "\n",
@@ -195,7 +195,7 @@
     "        x_temp,\n",
     "        y_temp,\n",
     "        test_size=0.2,\n",
-    "        random_state=42,\n",
+    "        random_state=seed,\n",
     "        stratify=y_temp\n",
     "    )\n",
     "\n",
@@ -204,7 +204,6 @@
     "model_dict = {}\n",
     "for f_name in sorted(os.listdir(\"./data/models/\")):\n",
     "    if 'original' not in f_name and f_name.endswith('keras'):\n",
-    "        print(f_name)\n",
     "        m = load_model(f\"./data/models/{f_name}\")\n",
     "        model_dict[f_name] = m\n",
     "        \n",
@@ -222,7 +221,6 @@
     "model_dict = {}\n",
     "for f_name in sorted(os.listdir(\"./data/models/\")):\n",
     "    if 'original' not in f_name and f_name.endswith('keras'):\n",
-    "        print(f_name)\n",
     "        m = load_model(f\"./data/models/{f_name}\")\n",
     "        model_dict[f_name] = m\n",
     "\n",
